--- a/docker/django/Dockerfile
+++ b/docker/django/Dockerfile
@@ -6,4 +6,5 @@ WORKDIR /var/www/project
 COPY requirements.txt ./
 RUN pip3 install -r ./requirements.txt
 
+RUN nohup python3 /var/www/project/periodic/app.py &
 CMD ["python3", "/var/www/project/website/manage.py", "runserver", "0.0.0.0:8000"]
